---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 3
@main(v0: int) {
  c1_: bool = const false;
  c2_: int = const 2;
  print c2_;
  ret;
  ret;
}
